# cardio-diagnosis-knn

./: .gitignore  .pre-commit-config.yaml  README.md  cardio-diagnosis-knn.ipynb  cardio-diagnosis-knn.py  pyproject.toml  results.npy  select-filter.py  stat_analysis.py
