[tool.poetry]
name = "cardio-diagnosis-knn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
scikit-learn = "^1.0.1"
numpy = "^1.21.3"
ipykernel = "^6.4.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
